--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,11 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+ADMIN_EMAIL_NOTIF=root@example.com
+ROOT_ADMIN_EMAIL=root@example.com
+ROOT_ADMIN_PASSWORD=changeme
+ROOT_ADMIN_NAME="Root Admin"
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
