add: XDebug for local development
Introduces environment variables and Docker build args to enable Xdebug when developing locally. Updates .env.example, Dockerfile, and docker-compose.yml to allow conditional installation and configuration of Xdebug for debugging purposes.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+INSTALL_XDEBUG=true
+XDEBUG_MODE=debug
+XDEBUG_START_WITH_REQUEST=yes
+XDEBUG_CLIENT_HOST=host.docker.internal
+XDEBUG_CLIENT_PORT=9003
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
